<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AnimacionActivity"
    android:background="@drawable/fondo_degradado">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/errorTallaAnimacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/EditarPerfil_error_talla"
            android:textColor="#D10B0B"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextIntTalla"
            app:layout_constraintTop_toBottomOf="@+id/editTextIntTalla" />

        <TextView
            android:id="@+id/errorNombreAnimacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/NuevaPrenda_error_nombre"
            android:textColor="#D10B0B"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextIntNombre"
            app:layout_constraintTop_toBottomOf="@+id/editTextIntNombre" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/PrimeraActivity_PreguntaControlPrendas"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/PrimeraActivity_FraseGestion"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewF3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/PrimeraActivity_FraseOrganiza"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewF4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/PrimeraActivity_FraseEmpecemos"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/añadirNombre"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/PrimeraActivity_PreguntaNombre"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextIntNombre"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/PrimeraActivity_IntroducirNombre"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/guardarNombre"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rectangulo"
            android:fontFamily="@font/roboto"
            android:hint="@string/PrimeraActivity_continuemos"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hola"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/PrimeraActivity_FraseHola_1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/añadirTalla"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/PrimeraActivity_PreguntaTalla"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/editTextIntTalla"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:alpha="0.9"
            android:animationCache="false"
            android:background="@drawable/spinner"
            android:elevation="10dp"
            android:entries="@array/Talla"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/guardarTalla"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rectangulo"
            android:fontFamily="@font/roboto"
            android:hint="@string/Comunes_guardar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/genialTexto"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/PrimeraActivity_FraseGenial"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/PrimeraActivity_FraseNombreInvalido"
            android:textColor="#FF0000"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>