<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FADFD7"
        android:contentDescription="Cambie su contraseña"
        android:scaleType="center" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/cambiaContrasenya_actual_titulo"
        app:layout_constraintBottom_toTopOf="@+id/antiguaContrasenyaPerfil"
        app:layout_constraintStart_toStartOf="@+id/antiguaContrasenyaPerfil"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewOjoContraseña1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/confirmarContrasenyaPerfil"
        app:layout_constraintEnd_toEndOf="@+id/imageViewOjoContraseña3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/confirmarContrasenyaPerfil"
        app:layout_constraintTop_toTopOf="@+id/confirmarContrasenyaPerfil"
        app:srcCompat="@drawable/icono_ojo_hide" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/cambiaContrasenya_nueva_titulo"
        app:layout_constraintBottom_toTopOf="@+id/nuevaContrasenyaPerfil"
        app:layout_constraintStart_toStartOf="@+id/nuevaContrasenyaPerfil" />

    <EditText
        android:id="@+id/nuevaContrasenyaPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/cambiaContrasenya_nueva_editText"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/confirmarContrasenyaPerfil"
        app:layout_constraintEnd_toStartOf="@+id/imageViewOjoContraseña3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/antiguaContrasenyaPerfil" />

    <ImageView
        android:id="@+id/imageViewOjoContraseña2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/antiguaContrasenyaPerfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/antiguaContrasenyaPerfil"
        app:layout_constraintTop_toTopOf="@+id/antiguaContrasenyaPerfil"
        app:srcCompat="@drawable/icono_ojo_hide" />

    <EditText
        android:id="@+id/antiguaContrasenyaPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/cambiaContrasenya_actual_editText"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/nuevaContrasenyaPerfil"
        app:layout_constraintEnd_toStartOf="@+id/imageViewOjoContraseña2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/cambiaContrasenya_confirmar_titulo"
        app:layout_constraintBottom_toTopOf="@+id/confirmarContrasenyaPerfil"
        app:layout_constraintStart_toStartOf="@+id/confirmarContrasenyaPerfil" />

    <EditText
        android:id="@+id/confirmarContrasenyaPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/cambiaContrasenya_confirmar_editText"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewOjoContraseña1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/nuevaContrasenyaPerfil"
        app:layout_constraintTop_toBottomOf="@+id/nuevaContrasenyaPerfil" />

    <ImageView
        android:id="@+id/imageViewOjoContraseña3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/nuevaContrasenyaPerfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nuevaContrasenyaPerfil"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/icono_ojo_hide" />

    <TextView
        android:id="@+id/textoErr6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/cambiaContrasenya_error_camposVacios"
        android:textAlignment="center"
        android:textColor="#D10B0B"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/confirmarContrasenyaPerfil"
        app:layout_constraintTop_toBottomOf="@+id/confirmarContrasenyaPerfil" />

    <TextView
        android:id="@+id/textoErr7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/cambiaContrasenya_error_contrasenyasNoCoinciden"
        android:textAlignment="center"
        android:textColor="#D10B0B"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/confirmarContrasenyaPerfil"
        app:layout_constraintTop_toTopOf="@+id/textoErr9" />

    <TextView
        android:id="@+id/textoErr9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/cambiaContrasenya_error_actualizar"
        android:textAlignment="center"
        android:textColor="#D10B0B"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/confirmarContrasenyaPerfil"
        app:layout_constraintTop_toBottomOf="@+id/confirmarContrasenyaPerfil" />

    <TextView
        android:id="@+id/textoErr8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/cambiaContrasenya_error_contrasenyaIncorrecta"
        android:textAlignment="center"
        android:textColor="#D10B0B"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/antiguaContrasenyaPerfil"
        app:layout_constraintTop_toBottomOf="@+id/antiguaContrasenyaPerfil" />

</androidx.constraintlayout.widget.ConstraintLayout>